WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212860
REGRESSION (
r256648
): Apple Pay <button> elements no longer use the default corner radius on iOS (affects Stripe.js)
https://bugs.webkit.org/show_bug.cgi?id=212860
Summary
REGRESSION (r256648): Apple Pay <button> elements no longer use the default c...
Andy Estes
Reported
2020-06-05 18:51:18 PDT
REGRESSION (
r256648
): Apple Pay <button> elements no longer use the default corner radius on iOS
Attachments
Patch
(13.44 KB, patch)
2020-06-05 19:25 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-06-05 18:51:39 PDT
<
rdar://problem/64054728
>
Andy Estes
Comment 2
2020-06-05 19:25:34 PDT
Created
attachment 401224
[details]
Patch
EWS
Comment 3
2020-06-05 21:00:46 PDT
Committed
r262669
: <
https://trac.webkit.org/changeset/262669
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401224
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug